--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "start": "web-dev-server"
   },
   "dependencies": {
-    "lit": "^3.1.4"
+    "lit": "^3.1.4",
+    "mobx": "^6.13.2"
   },
   "devDependencies": {
     "@custom-elements-manifest/analyzer": "^0.10.3",
