--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "start": "web-dev-server"
   },
   "dependencies": {
-    "lit": "^3.1.4",
-    "mobx": "^6.13.2"
+    "lit": "^3.1.4"
   },
   "devDependencies": {
     "@custom-elements-manifest/analyzer": "^0.10.3",
