--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "start": "web-dev-server"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.3.1",
     "lit": "^3.1.4",
     "mobx": "^6.13.2"
   },
