--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "start": "web-dev-server"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.3.1",
+    "@vercel/speed-insights": "^1.0.12",
     "lit": "^3.1.4",
     "mobx": "^6.13.2"
   },
