--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "eslint-config-prettier": "^9.1.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.7",
-    "prettier": "^3.3.2",
+    "prettier": "3.3.3",
     "rimraf": "^5.0.9",
     "rollup": "^4.18.1",
     "rollup-plugin-esbuild": "^6.1.1",
