--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "start": "web-dev-server"
   },
   "dependencies": {
+    "@lrnwebcomponents/meme-maker": "^8.0.2",
     "@rollup/plugin-image": "^3.0.3",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
